# TEST_vcpkg

./: .gitignore  CMakeLists.txt  Dockerfile  vcpkg.json
.github/workflows/: test_build.yml
Sources/: Main.cpp
Sources/Graphics/: Graphics.cpp  Graphics.hpp
Sources/Network/: Client.cpp  Client.hpp  Network.cpp  Network.hpp
